add un_section_hero image style, make quicklinks optional

--- a/components/03-organisms/site/site-header/_site-header-practical-information.twig
+++ b/components/03-organisms/site/site-header/_site-header-practical-information.twig
@@ -1,3 +1,4 @@
+{% if quicklinks is not empty %}
     <div id="block-un-geneva-pl-practicalinformationdynamicmenublock" class="block">
       <div>
         <div class="custom-select">
@@ -10,3 +11,4 @@
         </div>
       </div>
     </div>
+{% endif %}
