Fix logo path for subdir installs, update readme

--- a/components/03-organisms/site/site-header/site-header.twig
+++ b/components/03-organisms/site/site-header/site-header.twig
@@ -2,7 +2,7 @@
 {# If `directory` is defined, set the path relative for Drupal.
  # Otherwise, set the path relative to the Component Library. #}
 {% if use_theme_logo %}
-  {% set header__logo_src = directory ? '/' ~ un_geneva_design_system_path ~ '/images/logo.png' : 'logo.png' %}
+  {% set header__logo_src = directory ? un_geneva_design_system_path ~ '/images/logo.png' : 'logo.png' %}
 {% elseif site_logo %}
   {% set header__logo_src = site_logo %}
 {% else %}
