Update library for equal height boxes for 2&3 columns

--- a/components/03-organisms/box/_box.scss
+++ b/components/03-organisms/box/_box.scss
@@ -54,8 +54,13 @@
     padding: 1rem;
 
     @include breakpoint($screen-xs-min) {
-      display: table-cell;
-      vertical-align: top;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+
+      .un-buttons-container {
+        margin-top: auto;
+      }
     }
   }
 
