--- a/components/03-organisms/three-column-grid/three-column-grid.twig
+++ b/components/03-organisms/three-column-grid/three-column-grid.twig
@@ -13,6 +13,8 @@
  *
  */
 #}
+{{ attach_library('un_geneva_design_system/equal-height-cols') }}
+
 {% set column_central_width = 8 %}
 {% set column_side_width = 2 %}
 
