--- a/components/03-organisms/two-column-grid/two-column-grid.twig
+++ b/components/03-organisms/two-column-grid/two-column-grid.twig
@@ -10,6 +10,8 @@
  *
  */
 #}
+{{ attach_library('un_geneva_design_system/equal-height-cols') }}
+
 {% set column_one_width = 6 %}
 {% set column_two_width = 6 %}
 
