Add translations for Arabic, Chinese, Spanish and Russian

--- a/components/03-organisms/site/site-footer/site-footer.twig
+++ b/components/03-organisms/site/site-footer/site-footer.twig
@@ -8,7 +8,7 @@
         <div class="col col--left">
         {% block footer_content_left %}
           <div class="block social-media-connect">
-            <h2 class="block-title"><span>Follow and connect with us</span></h2>
+            <h2 class="block-title"><span>{{ 'Follow and connect with us'|t }}</span></h2>
             <ul class="social clearfix">
               <li class="social-fb"><a href="https://www.facebook.com/UN.Geneva" title="UN Geneva on Facebook" target="_blank"><i class="fa fa-facebook"></i><span class="sr-only">Follow UN Geneva on Facebook</span></a></li>
               <li class="social-fl"><a href="https://www.flickr.com/photos/unisgeneva" title="UN Geneva on flickr" target="_blank"><i class="fa fa-flickr"></i><span class="sr-only">Follow UNIS Geneva on Flickr</span></a></li>
@@ -27,7 +27,7 @@
         {% block footer_content_middle %}
           <!-- PL placeholder content -->
           <div id="block-un-geneva-pl-addressblock" class="block address-block">
-            <h2 class="block-title"><span>Contact</span></h2>
+            <h2 class="block-title"><span>{{ 'Contact'|t }}</span></h2>
             <p>Palais des Nations <br/>
             1211 Geneva 1211, Switzerland <br/>
             Phone: +41(0) 22 917 1234 </p>
