--- a/components/00-base/01-colors/_colors-vars.scss
+++ b/components/00-base/01-colors/_colors-vars.scss
@@ -24,8 +24,10 @@ $gray: #4b4b4b;
 
 $gray-100: #f2f2f2;
 $gray-200: #dadede;
+$gray-250: #c4c4c4;
 $gray-300: #a3a3a3;
 $gray-350: #707070;
+$gray-375: #5b5b5b;
 $gray-400: $gray;
 $gray-500: #303030;
 
