--- a/components/02-molecules/menus/_menu-list.twig
+++ b/components/02-molecules/menus/_menu-list.twig
@@ -1,7 +1,7 @@
 {% set ul_base_class = menu_class %}
 {% set ul_modifiers = menu_modifiers %}
 {% set ul_blockname = menu_blockname %}
-{% set ul_attributes = menu_attributes|default({role:'menu'}) %}
+{% set ul_attributes = menu_attributes|default({role:'list'}) %}
 
 {# List #}
 {% extends "@atoms/lists/ul.twig" %}
