--- a/components/00-base/03-site/_base.scss
+++ b/components/00-base/03-site/_base.scss
@@ -8,6 +8,16 @@ body {
   color: clr(text);
 
   @include body-copy;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+body>#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 *,
