--- a/components/00-base/03-site/_base.scss
+++ b/components/00-base/03-site/_base.scss
@@ -14,6 +14,7 @@ body {
   min-height: 100vh;
 }
 
+body>.dialog-off-canvas-main-canvas>.layout-container,
 body>#root {
   display: flex;
   flex-direction: column;
