Remove fontawesome from bundled css, replace home icon with svg

--- a/components/02-molecules/menus/social/social-menu.twig
+++ b/components/02-molecules/menus/social/social-menu.twig
@@ -7,7 +7,7 @@
 {# List #}
 {% extends "@atoms/lists/ul.twig" %}
   {% block list_content %}
-    {% for item in social_menu_items %}
+    {% for item in items %}
       {% include "@molecules/menus/social/_social-menu-item.twig" %}
     {% endfor %}
   {% endblock %}
