--- a/templates/layout/region--footer.html.twig
+++ b/templates/layout/region--footer.html.twig
@@ -17,3 +17,7 @@
 {% block footer_menu %}
   {{ page.footer_bottom.un_geneva_theme_footer }}
 {% endblock %}
+
+{% block social_menu %}
+  {{ page.footer_bottom.un_geneva_theme_social }}
+{% endblock %}
