--- a/components/03-organisms/site/site-footer/_site-footer.scss
+++ b/components/03-organisms/site/site-footer/_site-footer.scss
@@ -27,6 +27,7 @@
         border-right: 3px solid $gray-375;
         line-height: 1;
         padding: 0 0.8rem;
+        margin-bottom: 5px;
 
         &:last-child {
           border-right: none;
@@ -44,14 +45,22 @@
     &--top {
       display: flex;
       flex-direction: row;
-      align-items: flex-end;
+      align-items: center;
       justify-content: space-between;
-      margin-top: 1rem;
+
+      @include small {
+        align-items: flex-end;
+        margin-top: 1rem;
+      }
     }
 
     .un-logo {
-      width: 170px;
+      width: 140px;
       height: auto;
+
+      @include small {
+        width: 170px;
+      }
     }
   }
 
@@ -60,10 +69,12 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    flex-wrap: wrap;
     font-size: 1.5rem;
+    max-width: calc(100% - 160px);
 
     &__item {
-      margin: 0 1rem;
+      margin: 0.5rem;
     }
 
     &__link {
