--- a/components/03-organisms/site/site-footer/site-footer.twig
+++ b/components/03-organisms/site/site-footer/site-footer.twig
@@ -12,10 +12,15 @@
             <a href="{{ url('<front>') }}"><img src="{{ logo_src }}" /></a>
           </div>
           {% block social_menu %}
-            {% include "@molecules/menus/social/social-menu.twig" with {
-              menu_class: "social-menu",
-              items: social_menu,
-            } %}
+            <div id="block-un-geneva-theme-social-menu" class="block">
+              <span class="h2 visually-hidden block-title" id="block-un-geneva-theme-social-heading">Social</span>
+              <nav aria-labelledby="block-un-geneva-theme-social-heading" class="block">
+                {% include "@molecules/menus/social/social-menu.twig" with {
+                  menu_class: "social-menu",
+                  items: social_menu,
+                } %}
+              </nav>
+            </div>
           {% endblock %}
         </div>
         {% block footer_menu %}
