Replace footer regions + footer template update

--- a/components/04-templates/_default.twig
+++ b/components/04-templates/_default.twig
@@ -35,6 +35,9 @@
     </main>
   </div>
 
+  {% block content_bottom %}
+  {% endblock %}
+
   {% block page_footer %}
     {% include "@organisms/site/site-footer/site-footer.twig" %}
   {% endblock %}
