--- a/components/02-molecules/menus/social/_social-menu-link.twig
+++ b/components/02-molecules/menus/social/_social-menu-link.twig
@@ -2,10 +2,10 @@
 {% set link_base_class = 'link' %}
 {% set link_modifiers = item_modifiers %}
 {% set link_blockname = menu_class %}
-{% set icon_class = item.url.getOption('attributes').class[0] ?? item.icon %}
+{% set icon_class = directory ? item.url.getOption('attributes').class|join(' ') : item.icon %}
 
 {% extends "@atoms/links/link/link.twig" %}
   {% block link_content %}
-    <i class="fa {{ icon_class }}"></i>
+    <i class="{{ icon_class }}"></i>
     <span class="sr-only">{{ item.title }}</span>
   {% endblock %}
