--- a/templates/layout/region--footer.html.twig
+++ b/templates/layout/region--footer.html.twig
@@ -15,9 +15,9 @@
 {% extends "@organisms/site/site-footer/site-footer.twig" %}
 
 {% block footer_menu %}
-  {{ page.footer_bottom.un_geneva_theme_footer }}
+  {{ page.footer.un_geneva_theme_footer }}
 {% endblock %}
 
 {% block social_menu %}
-  {{ page.footer_bottom.un_geneva_theme_social }}
+  {{ page.footer.un_geneva_theme_social }}
 {% endblock %}
