--- a/components/03-organisms/site/site-footer/_site-footer.scss
+++ b/components/03-organisms/site/site-footer/_site-footer.scss
@@ -101,6 +101,7 @@
       &__link {
         font-size: 1.5rem;
         color: $gray-300;
+        height: 100%;
   
         &:hover {
           color: $gray-200;
