--- a/components/03-organisms/site/site-footer/site-footer.twig
+++ b/components/03-organisms/site/site-footer/site-footer.twig
@@ -11,23 +11,30 @@
           <div class="un-logo">
             <a href="{{ url('<front>') }}"><img src="{{ logo_src }}" /></a>
           </div>
-          {% block social_menu %}
-            <div id="block-un-geneva-theme-social-menu" class="block">
-              <span class="h2 visually-hidden block-title" id="block-un-geneva-theme-social-heading">Social</span>
-              <nav aria-labelledby="block-un-geneva-theme-social-heading" class="block">
-                {% include "@molecules/menus/social/social-menu.twig" with {
-                  menu_class: "social-menu",
-                  items: social_menu,
-                } %}
-              </nav>
-            </div>
+          {% block footer_social %}
+            {% block social_menu %}
+              <div id="block-un-geneva-theme-social-menu" class="block">
+                <span class="h2 visually-hidden block-title" id="block-un-geneva-theme-social-heading">Social</span>
+                <nav aria-labelledby="block-un-geneva-theme-social-heading" class="block">
+                  {% include "@molecules/menus/social/social-menu.twig" with {
+                    menu_class: "social-menu",
+                    items: social_menu,
+                  } %}
+                </nav>
+              </div>
+            {% endblock %}
           {% endblock %}
         </div>
         {% block footer_menu %}
-          {% include "@molecules/menus/_menu.twig" with {
-            menu_class: "footer-menu",
-            items: footer_menu,
-          } %}
+          <div id="block-footer-menu" class="block">
+            <span class="h2 visually-hidden block-title" id="block-footer-menu-heading">Fooeter menu</span>
+            <nav aria-labelledby="block-un-geneva-theme-social-heading" class="block">
+              {% include "@molecules/menus/_menu.twig" with {
+                menu_class: "footer-menu",
+                items: footer_menu,
+              } %}
+            </nav>
+          </div>
         {% endblock %}
       </div>
     </div>
