New footer fixes

--- a/components/03-organisms/site/site-footer/_site-footer.scss
+++ b/components/03-organisms/site/site-footer/_site-footer.scss
@@ -10,38 +10,6 @@
       padding: 1rem 0;
     }
 
-    &-menu {
-      padding: 0;
-      border-top: 1px solid $gray-375;
-      margin: 1rem 0;
-      padding-top: 1rem;
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-      flex-wrap: wrap;
-
-      &__item {
-        list-style-type: none;
-        display: inline-block;
-        border-right: 3px solid $gray-375;
-        line-height: 1;
-        padding: 0 0.8rem;
-        margin-bottom: 5px;
-
-        &:last-child {
-          border-right: none;
-        }
-      }
-      &__link {
-        color: $white;
-        font-size: 0.75rem;
-        letter-spacing: 0.77px;
-        text-transform: uppercase;
-        font-weight: 500;
-      }
-    }
-
     &--top {
       display: flex;
       flex-direction: row;
@@ -64,47 +32,134 @@
     }
   }
 
-  #block-un-geneva-theme-social-menu {
-    width: calc(100% - 160px);
-
-    nav {
-      width: 100%;
+  .region {
+    &--footer-social {
+      width: calc(100% - 160px);
       display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-
-    @include medium {
-      width: calc(100% - 190px);
-    }
-
-    .social-menu {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
+      flex-direction: column;
       flex-wrap: wrap;
-      font-size: 1.5rem;
-      width: 100%;
-  
-      &__item {
-        margin: 0.5rem;
+      align-items: flex-end;
+      justify-content: flex-end;
 
-        @include small {
-          margin: 0.5rem 0.7rem;
-        }
-        @include medium {
-          margin: 0.5rem 1rem;
+      & > .block {
+        margin-bottom: 1rem;
+        padding: 0;
+
+        &:last-child {
+          margin-bottom: 0;
         }
       }
+
+      @include medium {
+        width: calc(100% - 190px);
+        flex-direction: row;
+        align-items: center;
+
+        & > .block {
+          margin-bottom: 0;
+          margin-left: 1rem;
+          padding: 0 1rem 0 2rem;
+          border-left: 1px solid $gray-375;
   
-      &__link {
+          &:first-child {
+            margin-bottom: 0;
+            margin-left: 0;
+            padding-left: 1rem;
+            border-left: none;
+          }
+        }
+      }
+
+      nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+      }
+  
+      .social-menu {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        flex-wrap: wrap;
         font-size: 1.5rem;
-        color: $gray-300;
-        height: 100%;
+        width: 100%;
+    
+        &__item {
+          margin: 0.5rem;
   
-        &:hover {
-          color: $gray-200;
+          @include small {
+            margin: 0.5rem 0.7rem;
+          }
+          @include medium {
+            margin: 0.5rem 1rem;
+          }
+
+          html[dir=ltr] & {
+            &:first-child {
+              margin-left: 0;
+            }
+  
+            &:last-child {
+              margin-right: 0;
+            }
+          }
+          html[dir=rtl] & {
+            &:first-child {
+              margin-right: 0;
+            }
+  
+            &:last-child {
+              margin-left: 0;
+            }
+          }
+        }
+    
+        &__link {
+          font-size: 1.5rem;
+          color: $gray-300;
+          height: 100%;
+    
+          &:hover {
+            color: $gray-200;
+          }
+        }
+      }
+    }
+
+    &--footer-menu {
+      border-top: 1px solid $gray-375;
+      margin: 1rem 0;
+      padding-top: 1rem;
+
+      .menu,
+      .footer-menu {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+  
+        &__item {
+          list-style-type: none;
+          display: inline-block;
+          border-right: 3px solid $gray-375;
+          line-height: 1;
+          padding: 0 0.8rem;
+          margin-bottom: 5px;
+  
+          &:last-child {
+            border-right: none;
+          }
+        }
+        &__link {
+          color: $white;
+          font-size: 0.75rem;
+          letter-spacing: 0.77px;
+          text-transform: uppercase;
+          font-weight: 500;
         }
       }
     }
