--- a/components/03-organisms/site/site-footer/_site-footer.scss
+++ b/components/03-organisms/site/site-footer/_site-footer.scss
@@ -40,6 +40,7 @@
       flex-wrap: wrap;
       align-items: flex-end;
       justify-content: flex-end;
+      color: $gray-100;
 
       & > .block {
         margin-bottom: 1rem;
@@ -131,6 +132,7 @@
       border-top: 1px solid $gray-375;
       margin: 1rem 0;
       padding-top: 1rem;
+      color: $gray-100;
 
       .menu,
       .footer-menu {
