--- a/components/03-organisms/site/machine-translated-warning/machine-translated-warning.twig
+++ b/components/03-organisms/site/machine-translated-warning/machine-translated-warning.twig
@@ -1,5 +1,5 @@
 {% block machine_translated_label %}
-  <div>
+  <div class="machine-translated-warning">
     <ul class="status__list">
       <li class="status status--neutral">{{ 'This page was translated using machine translation.'|t }} <a href="/{{ current_language }}/multilingualism-disclaimer">{{ 'Read more'|t }}</a>.</li>
     </ul>
