--- a/components/02-molecules/featured-media/_featured-media.scss
+++ b/components/02-molecules/featured-media/_featured-media.scss
@@ -3,7 +3,36 @@
 
   &.with-video-embed {
     .colorbox-iframe {
-      display: none;
+      display: block;
+      position: absolute;
+      top: calc(50% - 30px);
+      left: calc(50% - 30px);
+
+      span {
+        display: block;
+        width: 60px;
+        height: 60px;
+        background-image: url('data:image/svg+xml,<%3Fxml version="1.0" encoding="utf-8"%3F><!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve"><g><g><g><path fill="%23000000" d="M121.3,10.1c-1.3,0.1-4.3,0.4-6.7,0.7c-51.4,5.8-93.4,45-102.6,95.7c-2.5,13.9-2.5,29.2,0,43.1c8.7,47.8,46.8,85.8,94.7,94.6c13.8,2.5,29.1,2.5,43,0c47.7-8.7,85.8-46.8,94.5-94.5c2.5-13.9,2.5-29.2,0-43c-8.7-47.4-46.2-85.4-93.5-94.5C142.8,10.6,128,9.6,121.3,10.1z M112.6,69.2c0.9,0.5,17.9,12,37.6,25.6c30.9,21.2,36.1,25,37.4,26.9c2.6,3.8,2.6,8.9,0,12.7c-1.3,1.9-6.5,5.7-37.4,26.9c-19.7,13.6-36.7,25.1-37.6,25.6c-5.6,2.9-12.7,0.6-15.5-5.1l-1.2-2.5V128V76.8l1.3-2.5c1.3-2.7,4-5,7-5.9C106.5,67.6,110.4,68,112.6,69.2z"/></g></g></g></svg>');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 0.4;
+      }
+
+      &:hover span {
+        opacity: 0.6;
+      }
+
+      @media (min-width: 992px) {
+        top: calc(50% - 40px);
+        left: calc(50% - 40px);
+  
+        span {
+          width: 80px;
+          height: 80px;
+        }
+      }
+  
     }
   }
 }
