--- a/components/02-molecules/featured-media/_featured-media.scss
+++ b/components/02-molecules/featured-media/_featured-media.scss
@@ -10,22 +10,21 @@
       display: flex;
       bottom: 0;
       right: 0;
-      align-items: center;
-      justify-content: center;
+      align-items: flex-end;
+      justify-content: flex-start;
 
       span {
         display: block;
         width: 60px;
         height: 60px;
-        background-image: url('data:image/svg+xml,<%3Fxml version="1.0" encoding="utf-8"%3F><!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve"><g><g><g><path fill="%23000000" d="M121.3,10.1c-1.3,0.1-4.3,0.4-6.7,0.7c-51.4,5.8-93.4,45-102.6,95.7c-2.5,13.9-2.5,29.2,0,43.1c8.7,47.8,46.8,85.8,94.7,94.6c13.8,2.5,29.1,2.5,43,0c47.7-8.7,85.8-46.8,94.5-94.5c2.5-13.9,2.5-29.2,0-43c-8.7-47.4-46.2-85.4-93.5-94.5C142.8,10.6,128,9.6,121.3,10.1z M112.6,69.2c0.9,0.5,17.9,12,37.6,25.6c30.9,21.2,36.1,25,37.4,26.9c2.6,3.8,2.6,8.9,0,12.7c-1.3,1.9-6.5,5.7-37.4,26.9c-19.7,13.6-36.7,25.1-37.6,25.6c-5.6,2.9-12.7,0.6-15.5-5.1l-1.2-2.5V128V76.8l1.3-2.5c1.3-2.7,4-5,7-5.9C106.5,67.6,110.4,68,112.6,69.2z"/></g></g></g></svg>');
+        background-image: url('data:image/svg+xml,<%3Fxml version="1.0" encoding="utf-8"%3F><svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><rect width="256" height="256" style="paint-order: fill; fill: rgb(29, 112, 184);"/><g><g><g><path d="M 112.6 69.2 C 113.5 69.7 130.5 81.2 150.2 94.8 C 181.1 116 186.3 119.8 187.6 121.7 C 190.2 125.5 190.2 130.6 187.6 134.4 C 186.3 136.3 181.1 140.1 150.2 161.3 C 130.5 174.9 113.5 186.4 112.6 186.9 C 107 189.8 99.9 187.5 97.1 181.8 L 95.9 179.3 L 95.9 128 L 95.9 76.8 L 97.2 74.3 C 98.5 71.6 101.2 69.3 104.2 68.4 C 106.5 67.6 110.4 68 112.6 69.2 Z" style="fill: rgb(255, 255, 255);"/></g></g></g></svg>');
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        opacity: 0.4;
       }
 
       &:hover span {
-        opacity: 0.6;
+        background-image: url('data:image/svg+xml,<%3Fxml version="1.0" encoding="utf-8"%3F><svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><rect width="256" height="256" style="paint-order: fill; fill: rgb(255, 255, 255);"/><g><g><g><path d="M 112.6 69.2 C 113.5 69.7 130.5 81.2 150.2 94.8 C 181.1 116 186.3 119.8 187.6 121.7 C 190.2 125.5 190.2 130.6 187.6 134.4 C 186.3 136.3 181.1 140.1 150.2 161.3 C 130.5 174.9 113.5 186.4 112.6 186.9 C 107 189.8 99.9 187.5 97.1 181.8 L 95.9 179.3 L 95.9 128 L 95.9 76.8 L 97.2 74.3 C 98.5 71.6 101.2 69.3 104.2 68.4 C 106.5 67.6 110.4 68 112.6 69.2 Z" style="fill: rgb(29, 112, 184);"/></g></g></g></svg>');
       }
 
       @media (min-width: 992px) {
