Add support for featured media component on the focuscard

--- a/components/02-molecules/card/focus-card/_focus-card.scss
+++ b/components/02-molecules/card/focus-card/_focus-card.scss
@@ -24,10 +24,15 @@
     &:nth-child(4n) {
       margin-right: 0;
     }
+
+    .field_featured_image.with-video-embed .colorbox-iframe span {
+      width: 60px;
+      height: 60px;
+    }
   }
 
   &__image {
-    border-bottom: 3px solid $blue;
+    border-bottom: 3px solid $un-blue-text;
 
     img {
       width: 100%;
